# credit_invoice_summariser

./: README.md  main.py  main.spec  pyproject.toml
src/: main.py  main.spec
src/credit_invoice_summariser/: database.py  invoice.py  utils.py
